@@ -35,7 +35,7 @@ This manual page was written by Jeremy Sanders <jeremy@jeremysanders.net>.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2003-2015 Jeremy Sanders <jeremy@jeremysanders.net>.
+Copyright (C) 2003-2017 Jeremy Sanders <jeremy@jeremysanders.net>.
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
