@@ -5,6 +5,7 @@ Changes in <next version>:
  * Windows build requires Windows 7 minimum
  * MacOS build requires MacOS 10.10 minimum
  * Move to using Sphinx for documentation
+ * Add Makefile for documentation and remove build script
 
 Changes in 1.27:
  * New FITS import code and user interface, allowing much more
